# youtube-video-downloader

./: .gitignore  .pre-commit-config.yaml  pre-commit-config.yaml  pyproject.toml  setup.py
src/: main.py
src/views/: main_window.py
