[project]
name = "youtube-video-downloader"
version = "0.1.0"
description = "An application to download YouTube videos with resolution selection."
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "PySide6>=6.5.0",
    "pytube>=15.0.0",
    "asyncio",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.7.3",
    "pre-commit>=2.15.0",
]

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]